Added bottom border

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </button>
         <span class="text-center text-sm text-blue-500 cursor-pointer hover:underline ">
           <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0">Forgotten Password?</span></a>
-        <div class="blackline items-center border border-solid border-x-black my-5">
+        <div class="blackline items-center border border-solid border-gray-300 my-5">
 
         </div>
         <button class="btn bg-green-500 hover:bg-green-600 text-white py-3 px-4 mx-auto text-center font-bold rounded-lg w-fit">Create New Account</button>
